# frozenvcmusicbot

.github/workflows/: kwaicut.yml
KwaiCut/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
KwaiCut/deploy/: Dockerfile.backend  docker-compose.yml
KwaiCut/docs/: AI_MODULES.md  API.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md
KwaiCut/src/kwaicut/: __init__.py  cli.py  config.py
KwaiCut/src/kwaicut/ai/: __init__.py  base.py  captions.py  providers.py  registry.py
KwaiCut/src/kwaicut/backend/: __init__.py  app.py  dependencies.py  schemas.py  security.py
KwaiCut/src/kwaicut/backend/api/: __init__.py
KwaiCut/src/kwaicut/backend/api/routes/: __init__.py  ai.py  auth.py  collaboration.py  marketplace.py  projects.py  subscriptions.py
KwaiCut/src/kwaicut/backend/services/: __init__.py  auth_service.py  collaboration.py  marketplace_service.py  project_service.py
KwaiCut/src/kwaicut/common/: __init__.py  errors.py  logging_config.py  types.py
KwaiCut/src/kwaicut/core/: __init__.py
KwaiCut/src/kwaicut/core/rendering/: __init__.py  export.py  ffmpeg.py  presets.py  render_engine.py
KwaiCut/src/kwaicut/core/timeline/: __init__.py  keyframes.py  models.py  operations.py
KwaiCut/src/kwaicut/db/: __init__.py  base.py  models.py
KwaiCut/src/kwaicut/desktop/: __init__.py  app.py  theme.py
KwaiCut/src/kwaicut/desktop/widgets/: __init__.py  ai_panel.py  dashboard.py  timeline_view.py
KwaiCut/tests/: conftest.py
KwaiCut/tests/unit/: test_api.py  test_captions.py  test_collaboration.py  test_keyframes.py  test_providers.py  test_render_engine.py  test_security.py  test_timeline.py  test_types.py
